Bug #57923
log: writes to stderr (pipe) may not be atomic
% Done:
0%
Source:
Development
Tags:
backport_processed
Backport:
quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Description
This can lead to logging from pods like:
> 2022-07-18T14:29:22.526642827+00:00 stderr P cluster 2022-07- > 2022-07-18T14:29:22.526646823+00:00 stderr P 18T14:29:22.439682 > 2022-07-18T14:29:22.526650738+00:00 stderr P +0000 mon.b (mon.0) 249139 > 2022-07-18T14:29:22.526654507+00:00 stderr F : cluster [DBG] fsmap ocs-storagecluster-cephfilesystem:1 {0=ocs-storagecluster-cephfilesystem-a=up:active} 1 up:standby > 2022-07-18T14:29:22.526658291+00:00 stderr P cluster > 2022-07-18T14:29:22.526662146+00:00 stderr P 2022-07-18T14 > 2022-07-18T14:29:22.526665917+00:00 stderr P :29:22.454390 > 2022-07-18T14:29:22.526669648+00:00 stderr P +0000 mon.b (mon.0 > 2022-07-18T14:29:22.526673500+00:00 stderr P ) 249140 : cluster [DBG] > 2022-07-18T14:29:22.526677415+00:00 stderr F fsmap ocs-storagecluster-cephfilesystem:1 {0=ocs-storagecluster-cephfilesystem-a=up:active} 1 up:standby-replay > 2022-07-18T14:29:23.537571122+00:00 stderr P debug > 2022-07-18T14:29:23.537611424+00:00 stderr P 2022-07-18T14:29:23.536+0000 7f8a188b2700 0 log_channel(audit) log [DBG] : from='admin socket' entity='admin socket' cmd='mon_status' args=[]: dispatch > 2022-07-18T14:29:23.537622756+00:00 stderr F > 2022-07-18T14:29:23.537675913+00:00 stderr P debug > 2022-07-18T14:29:23.537689376+00:00 stderr P 2022-07-18T14:29:23.536+0000 7f8a188b2700 0 log_channel(audit) log [DBG] : from='admin socket' entity='admin socket' cmd=mon_status args=[]: finished > 2022-07-18T14:29:23.537699437+00:00 stderr F > 2022-07-18T14:29:23.542529664+00:00 stderr P cluster > 2022-07-18T14:29:23.542575753+00:00 stderr P > 2022-07-18T14:29:23.542593114+00:00 stderr P 2022 > 2022-07-18T14:29:23.542601668+00:00 stderr P - > 2022-07-18T14:29:23.542610583+00:00 stderr P 07 > 2022-07-18T14:29:23.542618917+00:00 stderr P - > 2022-07-18T14:29:23.542626823+00:00 stderr P 18 > 2022-07-18T14:29:23.542634676+00:00 stderr P T > 2022-07-18T14:29:23.542642573+00:00 stderr P 14 > 2022-07-18T14:29:23.542650372+00:00 stderr P :
Related issues
History
#1 Updated by Patrick Donnelly 3 months ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 48623
#2 Updated by Patrick Donnelly 3 months ago
- Related to Cleanup #53682: common: use fmt::print for stderr logging added
#3 Updated by Patrick Donnelly 3 months ago
- Related to Bug #49551: cephadm journald logs are mangled added
#4 Updated by Ilya Dryomov 2 months ago
- Status changed from Fix Under Review to Pending Backport
#5 Updated by Backport Bot 2 months ago
- Copied to Backport #58187: pacific: log: writes to stderr (pipe) may not be atomic added
#6 Updated by Backport Bot 2 months ago
- Copied to Backport #58188: quincy: log: writes to stderr (pipe) may not be atomic added
#7 Updated by Backport Bot 2 months ago
- Tags set to backport_processed