src/log/Log.h
@@ -18,6 +18,8 @@
 
 #include "log/Entry.h"
 
+#include <unistd.h>
+
 namespace ceph {
 namespace logging {
 
@@ -41,6 +43,7 @@ public:
   void reopen_log_file();
   void chown_log_file(uid_t uid, gid_t gid);
   void set_log_stderr_prefix(std::string_view p);
+  void set_stderr_fd(int fd);
 
   void flush();
 
@@ -95,6 +98,8 @@ private:
   uid_t m_uid = 0;
   gid_t m_gid = 0;
 
+  int m_fd_stderr = STDERR_FILENO;
+
   int m_fd_last_error = 0;  ///< last error we say writing to fd (if any)
 
   int m_syslog_log = -2, m_syslog_crash = -2;
@@ -102,6 +107,7 @@ private:
   int m_graylog_log = -3, m_graylog_crash = -3;
 
   std::string m_log_stderr_prefix;
+  bool do_stderr_poll = false;
 
   std::shared_ptr<Graylog> m_graylog;
 
@@ -121,6 +127,8 @@ private:
   void _flush(EntryVector& q, bool crash);
 
   void _log_message(std::string_view s, bool crash);
+  void _configure_stderr();
+  void _log_stderr(std::string_view strv);
 };
 
 }
